feat: Added consul, added migrations, updated APIs, updated Swagger, added Health Route
