# src/models.py
@@ -3,6 +3,15 @@ from app import db
 class TransferProductRent(db.Model):
     __tablename__ = "transfer_product_rent"
     id = db.Column(db.Integer, primary_key=True)
-    locationWhereToRent = db.Column(db.String(16))
-    locationToLeave = db.Column(db.String(16))
-    boolean = db.Column(db.Boolean)
+    rentedByUser = db.Column(db.String(36))
+    dateRented = db.Column(db.DateTime)
+    product_id = db.Column(db.Integer)
+
+class TransferProductPark(db.Model):
+    __tablename__ = "transfer_product_park"
+    id = db.Column(db.Integer, primary_key=True)
+    parkedByUser = db.Column(db.String(36))
+    dateParked = db.Column(db.DateTime)
+    product_id = db.Column(db.Integer)
+    parking_spot_id = db.Column(db.Integer)
+    parking_zone_id = db.Column(db.Integer)
